--- a/products.html
+++ b/products.html
@@ -326,7 +326,7 @@
 							
 							<div class="row pt-2">
 
-								<div class="col-md-6 col-lg-4 col-xl-3 pb-3 products__padding">
+								<div class="col-sm-6 col-lg-4 col-xl-3 pb-3 products__padding">
 									<div class="products__wrap">
 										<a href="product.html" class="products__card">
 											<p class="vendor-code">код товара: 1337</p>
@@ -343,7 +343,7 @@
 									</div>
 								</div>
 								
-								<div class="col-md-6 col-lg-4 col-xl-3 pb-3 products__padding">
+								<div class="col-sm-6 col-lg-4 col-xl-3 pb-3 products__padding">
 									<div class="products__wrap">
 										<a href="product.html" class="products__card">
 											<p class="vendor-code">код товара: 1337</p>
@@ -360,7 +360,7 @@
 									</div>
 								</div>
 
-								<div class="col-md-6 col-lg-4 col-xl-3 pb-3 products__padding">
+								<div class="col-sm-6 col-lg-4 col-xl-3 pb-3 products__padding">
 									<div class="products__wrap">
 										<a href="product.html" class="products__card">
 											<p class="vendor-code">код товара: 1337</p>
@@ -377,7 +377,7 @@
 									</div>
 								</div>
 
-								<div class="col-md-6 col-lg-4 col-xl-3 pb-3 products__padding">
+								<div class="col-sm-6 col-lg-4 col-xl-3 pb-3 products__padding">
 									<div class="products__wrap">
 										<a href="product.html" class="products__card">
 											<p class="vendor-code">код товара: 1337</p>
@@ -394,7 +394,7 @@
 									</div>
 								</div>
 
-								<div class="col-md-6 col-lg-4 col-xl-3 pb-3 products__padding">
+								<div class="col-sm-6 col-lg-4 col-xl-3 pb-3 products__padding">
 									<div class="products__wrap">
 										<a href="product.html" class="products__card">
 											<p class="vendor-code">код товара: 1337</p>
@@ -411,7 +411,7 @@
 									</div>
 								</div>
 
-								<div class="col-md-6 col-lg-4 col-xl-3 pb-3 products__padding">
+								<div class="col-sm-6 col-lg-4 col-xl-3 pb-3 products__padding">
 									<div class="products__wrap">
 										<a href="product.html" class="products__card">
 											<p class="vendor-code">код товара: 1337</p>
@@ -428,7 +428,7 @@
 									</div>
 								</div>
 
-								<div class="col-md-6 col-lg-4 col-xl-3 pb-3 products__padding">
+								<div class="col-sm-6 col-lg-4 col-xl-3 pb-3 products__padding">
 									<div class="products__wrap">
 										<a href="product.html" class="products__card">
 											<p class="vendor-code">код товара: 1337</p>
@@ -445,7 +445,7 @@
 									</div>
 								</div>
 
-								<div class="col-md-6 col-lg-4 col-xl-3 pb-3 products__padding">
+								<div class="col-sm-6 col-lg-4 col-xl-3 pb-3 products__padding">
 									<div class="products__wrap">
 										<a href="product.html" class="products__card">
 											<p class="vendor-code">код товара: 1337</p>
@@ -462,7 +462,7 @@
 									</div>
 								</div>
 
-								<div class="col-md-6 col-lg-4 col-xl-3 pb-3 products__padding">
+								<div class="col-sm-6 col-lg-4 col-xl-3 pb-3 products__padding">
 									<div class="products__wrap">
 										<a href="product.html" class="products__card">
 											<p class="vendor-code">код товара: 1337</p>
