--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 							<section class="content__slider">
 								<div class="slider-block">
 									<div class="slider-block__slide">
-										<div class="slider-block__bi" style="background-image: url(../img/slider-img1.png)"></div>
+										<div class="slider-block__bi" style="background-image: url(/img/slider-img1.png)"></div>
 										<span class="ring ring-1 js-slider-parallax"></span>
 										<span class="ring ring-2 js-slider-parallax"></span>
 										<span class="ring ring-3 js-slider-parallax"></span>
@@ -261,7 +261,7 @@
 												</div>
 											</div>
 											<div class="content__slider__image slider-image1 js-slider-parallax">
-												<img src="../img/slider-img1.png" alt="img">
+												<img src="/img/slider-img1.png" alt="img">
 											</div>
 											<div class="text-right content__slider__description slider-description2 js-slider-parallax">
 												<h4>LED Драйверы<br>производства завода<br>Аргос-Электрон</h4>
@@ -270,7 +270,7 @@
 									</div>
 
 									<div class="slider-block__slide">
-										<div class="slider-block__bi" style="background-image: url(../img/slider-img2.png)"></div>
+										<div class="slider-block__bi" style="background-image: url(/img/slider-img2.png)"></div>
 										<span class="ring ring-4 js-slider-parallax"></span>
 										<span class="ring ring-5 js-slider-parallax"></span>
 										<div class="position-relative h-100 w-100">
@@ -292,7 +292,7 @@
 													pede mollis pretium. Integer tincidunt</p>
 											</div>
 											<div class="content__slider__image slider-image2 js-slider-parallax">
-												<img src="../img/slider-img2.png" alt="img">
+												<img src="/img/slider-img2.png" alt="img">
 											</div>
 											<div class="content__slider__description slider-description4 js-slider-parallax">
 												<p class="content__slider__description-title-fz">
@@ -321,7 +321,7 @@
 								<div class="slider-block">
 
 									<div class="slider-block__slide">
-										<div class="slider-block__bi" style="background-image: url(../img/slider-img2.png)"></div>
+										<div class="slider-block__bi" style="background-image: url(/img/slider-img2.png)"></div>
 										<span class="ring ring-4 js-slider-parallax"></span>
 										<span class="ring ring-5 js-slider-parallax"></span>
 										<div class="position-relative h-100 w-100">
@@ -343,7 +343,7 @@
 													pede mollis pretium. Integer tincidunt</p>
 											</div>
 											<div class="content__slider__image slider-image2 js-slider-parallax">
-												<img src="../img/slider-img2.png" alt="img">
+												<img src="/img/slider-img2.png" alt="img">
 											</div>
 											<div class="content__slider__description slider-description4 js-slider-parallax">
 												<p class="content__slider__description-title-fz">
