--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 							<section class="content__slider">
 								<div class="slider-block">
 									<div class="slider-block__slide">
-										<div class="slider-block__bi" style="background-image: url(/img/slider-img1.png)"></div>
+										<div class="slider-block__bi" style="background-image: url(img/slider-img1.png)"></div>
 										<span class="ring ring-1 js-slider-parallax"></span>
 										<span class="ring ring-2 js-slider-parallax"></span>
 										<span class="ring ring-3 js-slider-parallax"></span>
@@ -270,7 +270,7 @@
 									</div>
 
 									<div class="slider-block__slide">
-										<div class="slider-block__bi" style="background-image: url(/img/slider-img2.png)"></div>
+										<div class="slider-block__bi" style="background-image: url(img/slider-img2.png)"></div>
 										<span class="ring ring-4 js-slider-parallax"></span>
 										<span class="ring ring-5 js-slider-parallax"></span>
 										<div class="position-relative h-100 w-100">
@@ -321,7 +321,7 @@
 								<div class="slider-block">
 
 									<div class="slider-block__slide">
-										<div class="slider-block__bi" style="background-image: url(/img/slider-img2.png)"></div>
+										<div class="slider-block__bi" style="background-image: url(img/slider-img2.png)"></div>
 										<span class="ring ring-4 js-slider-parallax"></span>
 										<span class="ring ring-5 js-slider-parallax"></span>
 										<div class="position-relative h-100 w-100">
