--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 												</div>
 											</div>
 											<div class="content__slider__image slider-image1 js-slider-parallax">
-												<img src="/img/slider-img1.png" alt="img">
+												<img src="img/slider-img1.png" alt="img">
 											</div>
 											<div class="text-right content__slider__description slider-description2 js-slider-parallax">
 												<h4>LED Драйверы<br>производства завода<br>Аргос-Электрон</h4>
@@ -292,7 +292,7 @@
 													pede mollis pretium. Integer tincidunt</p>
 											</div>
 											<div class="content__slider__image slider-image2 js-slider-parallax">
-												<img src="/img/slider-img2.png" alt="img">
+												<img src="img/slider-img2.png" alt="img">
 											</div>
 											<div class="content__slider__description slider-description4 js-slider-parallax">
 												<p class="content__slider__description-title-fz">
@@ -343,7 +343,7 @@
 													pede mollis pretium. Integer tincidunt</p>
 											</div>
 											<div class="content__slider__image slider-image2 js-slider-parallax">
-												<img src="/img/slider-img2.png" alt="img">
+												<img src="img/slider-img2.png" alt="img">
 											</div>
 											<div class="content__slider__description slider-description4 js-slider-parallax">
 												<p class="content__slider__description-title-fz">
