--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 					</div>
 				</main>	
 
-				<div class="d-none" id="block-dropdown-phone">
+				<div class="d-none mod" id="block-dropdown-phone">
 					<span class="modal-windows__bg"></span>
 					<div class="modal-windows modal-windows--phone">
 						<div class="modal-windows__close d-flex justify-content-center align-items-center" id="block-dropdown-phone__close">
@@ -435,7 +435,7 @@
 						<span class="modal-windows__triangle modal-windows__triangle--phone"></span>
 					</div>	
 				</div>
-				<div class="d-none" id="block-dropdown-partner">
+				<div class="d-none mod" id="block-dropdown-partner">
 					<span class="modal-windows__bg"></span>
 					<div class="modal-windows modal-windows--partner">
 						<div class="modal-windows__close d-flex justify-content-center align-items-center" id="block-dropdown-partner__close">
