--- a/products.html
+++ b/products.html
@@ -315,7 +315,7 @@
 						</div>
 
 						<div class="col py-2 products__cards">
-							<h1 class="products__title px-2">Промышленные светодиодные светильники</h1>
+							<h1 class="page-header px-2">Промышленные светодиодные светильники</h1>
 							
 							<button class="button button__filter" id="button-filter">
 								Фильтр 
